--- a/style.css
+++ b/style.css
@@ -1,3 +1,126 @@
 .conteiner{
-  width: 1400px;
+  max-width:1340px;
+  margin: 0px auto;
+}
+header{
+  background-color:#000;
+}
+.header_menu{
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  height:70px;
+}
+.menu a{
+  color:#b2b2b2;
+  margin-left:45px;
+  font-weight:600;
+  position: relative;
+  transition-property:color;
+  transition-duration:0.4s;
+}
+.menu a:hover{
+  color:#fff;
+}
+.menu a::before{
+  content:"";
+  position: absolute;
+  height:2.2px;
+  width:100%;
+  top:-4px;
+  left:0px;
+  background-color:#ff862e;
+  transform: scaleX(0);
+  transition-property:transform;
+  transition-duration:0.4s;
+}
+.menu a:hover::before{
+  transform: scaleX(1);
+}
+.menu a::after{
+  content:"";
+  position: absolute;
+  height:2.2px;
+  width:100%;
+  bottom:-4px;
+  left:0px;
+  background-color:#ff862e;
+  transform: scaleX(0);
+  transition-property:transform;
+  transition-duration:0.4s;
+}
+.menu a:hover::after{
+  transform: scaleX(1);
+}
+.header_inside{
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  justify-content: space-between;
+  padding:140px 0px 140px 0px;
+}
+.inside_block_first img{
+  margin-bottom:35px;
+}
+.inside_block_first h1{
+  color:#fff;
+  font-size:34px;
+}
+.line{
+  position:relative;
+  margin:40px 0px 30px 0px;
+}
+.line::before{
+  content:"";
+  position: absolute;
+  width:70px;
+  height:2.3px;
+  background-color:#fff;
+}
+.inside_block_first p{
+  color:#fff;
+  max-width:465px;
+  line-height:20px;
+}
+.download_button{
+  background: rgb(255,68,0);
+  background: linear-gradient(90deg, rgba(255,68,0,1) 32%, rgba(90,35,229,1) 100%);
+  color:#fff;
+  padding:15px 30px;
+  font-size:16px;
+  font-weight:600;
+  margin-top:45px;
+  cursor: pointer;
+}
+.download_button:hover{
+  background: rgb(255,21,0);
+  background: linear-gradient(90deg, rgba(255,21,0,1) 32%, rgba(44,35,229,1) 100%);
+}
+.inside_block_second{
+  max-width:360px;
+  background-color:#b2b2b2;
+}
+.up{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color:#303030;
+  font-size:23px;
+  font-weight: 600;
+  background-color:#f5f5f5;
+  height:54px;
+}
+.up_span{
+  color:#ff862e;
+  margin:0px 6px;
+}
+.trial{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.get_started{
+  bottom:0px;
 }
