--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .conteiner{
   max-width:1340px;
   margin: 0px auto;
+  padding:0px 10px;
 }
 header{
   background-color:#000;
@@ -99,8 +100,14 @@ header{
   background: linear-gradient(90deg, rgba(255,21,0,1) 32%, rgba(44,35,229,1) 100%);
 }
 .inside_block_second{
-  max-width:360px;
-  background-color:#b2b2b2;
+  width:360px;
+  background-color:#fff;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
+  border-radius:5px;
 }
 .up{
   display: flex;
@@ -111,6 +118,8 @@ header{
   font-weight: 600;
   background-color:#f5f5f5;
   height:54px;
+  border-top-left-radius:5px;
+  border-top-right-radius:5px;
 }
 .up_span{
   color:#ff862e;
@@ -118,9 +127,31 @@ header{
 }
 .trial{
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  flex-direction:column;
+  width:70%;
+  margin: 0px auto;
+}
+.trial_free{
+  padding:9px 15px;
+  border-bottom: 2px solid #F2F2F2;
+  transition:0.4s;
+}
+.trial_free:focus{
+  border-bottom-color:#598ACE;
+}
+.trial_free:nth-child(2){
+  margin:60px 0px;
 }
 .get_started{
-  bottom:0px;
+  height:50px;
+  color:#fff;
+  border-bottom-right-radius:5px;
+  border-bottom-left-radius:5px;
+  font-size:15px;
+  font-weight:600;
+  cursor: pointer;
+  background: rgb(255,64,0);
+  background: linear-gradient(90deg, rgba(255,64,0,1) 0%, rgba(221,229,35,1) 100%);
+  transition:1s;
+  position: relative;
 }
